<resources>
    <string name="app_name">OraChat</string>
    <string name="splash_text">Ora\nInteractive</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_here"><u>Register here</u></string>
    <string name="register_text">No Account yet?</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="login_text">Already have an account?</string>
    <string name="login_here"><u>Login here</u></string>
    <string name="confirm">Confirm</string>
    <string name="save">Save</string>
    <string name="retry">Retry</string>

    <string name="error_no_internet_connection">No internet connection!</string>

    <!--LoginActivity-->
    <string name="login_successful_message">Successfully logged in</string>
    <string name="login_failed_message">Login failed</string>
    <string name="login_progress_message">Logging in…</string>

    <!--RegisterActivity-->
    <string name="register_successful_message">New account successfully created</string>
    <string name="register_failed_message">Register new user failed</string>
    <string name="register_progress_message">Creating Account…</string>

    <!--Account-->
    <string name="fetch_user_details_error">Could not fetch user details</string>
    <string name="edit_user_details_successful">Profile updated</string>
    <string name="edit_user_details_error">Unable to edit profile</string>
    <string name="edit_user_details_progress">Saving profile…</string>

    <!--Chat-->
    <string name="fetch_chat_list_error">Failed to fetch chat list</string>
    <string name="create_chat_error">Failed to create new chat</string>
    <string name="create_chat_progress">Creating new chat…</string>
    <string name="fetch_message_list_error">Failed to fetch message list</string>
    <string name="create_message_error">Failed to create message</string>
    <string name="create_message_progress">Creating message…</string>
</resources>
